k8s/wedding/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wedding
  labels:
    name: wedding
